--- a/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -1,10 +1,11 @@
 .CheckoutSummary {
+  clear: both;
   text-align: center;
   width: 80%;
   margin: auto;
 }
 
-@media (min-width: 600px) {
+@media (max-width: 600px) {
   .CheckoutSummary {
     width: 500px;
   }
