--- a/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/src/containers/Checkout/ContactData/ContactData.module.css
@@ -6,13 +6,13 @@
   padding: 10px;
   box-sizing: border-box;
 }
-
+/* 
 .Input {
   width: 80%;
   padding: 10px;
   margin: 10px auto;
   display: block;
-}
+} */
 
 @media (min-width: 600px) {
   .ContactData {
